...
        let customWorkout = buildCustomWorkout(
            workoutType: workoutType,
            exercises: exercises,
            useLbs: useLbs
        )

        let plan = WorkoutPlan(.custom(customWorkout), id: id)
        var dateComponents = Calendar.current.dateComponents(
            [.year, .month, .day, .hour, .minute],
            from: date
        )
        dateComponents.calendar = Calendar.current
        await scheduler.schedule(plan, at: dateComponents)
...
